cabal-version:       3.0
name:                se
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/strake/se
bug-reports:         https://github.com/strake/se/issues
license:             NONE
author:              M Farkas-Dyck
maintainer:          M Farkas-Dyck <strake888@gmail.com>
copyright:           2022 M Farkas-Dyck
build-type:          Simple
extra-doc-files:
  README.md
  CHANGELOG.md
tested-with:GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/strake/se.git

common c
  build-depends:       ListLike == 4.6.2
                     , array ^>= 0.5.4.0
                     , base ^>= 4.14.0.0
                     , bytestring ^>= 0.10.12.0
                     , containers ^>= 0.6.2.1
                     , filtrable ^>= 0.1.6.0
                     , microlens ^>= 0.4.12.0
                     , regex-base ^>= 0.94
                     , regex-tdfa ^>= 1.3.1.1
                     , process ^>= 1.6.9.0
                     , process-extras ^>= 0.7.4
                     , transformers ^>= 0.5.6.2
                     , ucd ^>= 0.0
                     , utf8-string ^>= 1.0.2
                     , util ^>= 0.1.21

  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wno-name-shadowing
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=incomplete-record-updates
    -Werror=missing-fields
    -Werror=missing-methods
  default-language:    Haskell2010
  default-extensions:
    UnicodeSyntax
    LambdaCase
    EmptyCase
    BlockArguments
    InstanceSigs
    PartialTypeSignatures
    PolyKinds
    ConstraintKinds
    FlexibleContexts
    FlexibleInstances
    MonadComprehensions
    StandaloneDeriving
    DeriveTraversable
    OverloadedStrings

executable se
  import:              c
  main-is:             Main.hs
  hs-source-dirs:      x
  build-depends:       se

library
  import:              c
  hs-source-dirs:      src
  exposed-modules:
    Lib
  other-modules:
    Posited
  build-depends:       process-x

library process-x
  import:              c
  hs-source-dirs:      src-process-x
  exposed-modules:
    Process

test-suite test
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       se
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark bench
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       gauge
                     , se
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
